# magnolia

./: .gitignore  README.md  pyproject.toml
modules/magnolia/: __init__.py  animation.py  constraint.py  geonodes.py  location.py  material.py  mesh.py  modifier.py  objects.py  scene.py  visibility.py
modules/magnolia/animation/: __init__.py  animation.py  visibility.py
modules/magnolia/core/: __init__.py  util.py
modules/magnolia/objects/: __init__.py  constraint.py  geonodes.py  location.py  material.py  mesh.py  modifier.py  object.py
modules/magnolia/scene/: __init__.py  camera.py  collection.py  context.py  output.py
modules/magnolia/slide/: __init__.py  slide.py
modules/magnolia/slides/: __init__.py  colors.py  position.py  slide.py
modules/magnolia/slides/objects/: __init__.py  object.py  rectangle.py
